[#8] Change access token to PERSONAL_ACCESS_TOKEN

--- a/.github/workflows/issue-states.yml
+++ b/.github/workflows/issue-states.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: dessant/issue-states@v3
         with:
-          github-token: ${{ github.token }}
+          github-token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           open-issue-columns: ''
           closed-issue-columns: 'Closed, Done, Archived'
           log-output: true
