--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,6 +1,7 @@
 name: Cron Job Workflow
 
 on:
+  workflow_dispatch:
   # Triggers the workflow every 5 minutes
   schedule:
     - cron: "*/5 * * * *"
